// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Components) AddButton renders correctly with basic required props 1`] = `
.c1 {
  text-align: center;
}

.c1[type=button] {
  line-height: normal;
  font-weight: normal;
}

.c1 .md-icon-text {
  font-weight: normal;
}

.c1 .md-icon {
  color: inherit;
}

.c0 {
  color: #2196f3;
}

@media (min-width:0) and (max-width:599px) {
  .c0 {
    position: absolute;
    top: 4px;
    right: 50px;
  }
}

@media (min-width:600px) and (max-width:959px) {
  .c0 {
    position: absolute;
    top: 4px;
    right: 50px;
  }
}

<button
  class="md-btn md-btn--icon md-pointer--hover md-inline-block c0 c1"
  type="button"
>
  <i
    class="md-icon material-icons md-text--inherit"
  >
    add
  </i>
</button>
`;

exports[`(Components) AddButton renders correctly with label 1`] = `
.c1 {
  text-align: center;
  border-radius: 3px;
  min-width: 90px;
}

.c1[type=button] {
  line-height: normal;
  font-weight: normal;
}

.c1 .md-icon-text {
  font-weight: normal;
}

.c1 .md-icon {
  color: inherit;
}

.c0 {
  color: #2196f3;
}

<button
  class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text md-inline-block c0 c1"
  type="button"
>
  <div
    class="md-icon-separator"
  >
    <i
      class="md-icon material-icons md-text--inherit"
    >
      add
    </i>
    <span
      class="md-icon-text"
    >
      Wow
    </span>
  </div>
</button>
`;
